# china-stock-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: design.md  roadmap.md  usage.md
src/china_stock_mcp/: __init__.py  cache.py  config.py  error_mapping.py  exceptions.py  formatters.py  models.py  normalizer.py  rate_limiter.py  server.py
src/china_stock_mcp/adapters/: __init__.py  akshare_adapter.py  base.py  efinance_adapter.py  fallback.py  tushare_adapter.py
src/china_stock_mcp/prompts/: __init__.py  research_report.py  valuation_compare.py  weekly_review.py
src/china_stock_mcp/resources/: __init__.py  market_overview.py  north_flow.py  symbol_profile.py
src/china_stock_mcp/services/: __init__.py  financial_report_service.py  fund_service.py  fundamental_service.py  industry_service.py  kline_service.py  market_service.py  money_flow_service.py  quote_service.py  screen_service.py  symbol_service.py
src/china_stock_mcp/tools/: __init__.py  financial.py  fund.py  fundamental.py  industry.py  kline.py  market_overview.py  money_flow.py  quote.py  screen.py  search.py
tests/integration/: test_disclaimer_property.py  test_fallback_chain.py  test_prompt_degradation.py  test_resources.py  test_search_quote_flow.py  test_token_budget.py
tests/unit/: test_cache.py  test_config.py  test_error_mapping.py  test_error_no_traceback.py  test_exceptions.py  test_fallback.py  test_financial_report_service.py  test_financial_tool.py  test_formatters.py  test_fund_tool.py  test_fundamental_service.py  test_fundamental_tool.py  test_industry_service.py  test_industry_tool.py  test_kline.py  test_kline_property.py  test_logger.py  test_logging_policy.py  test_market_overview_tool.py  test_models.py  test_money_flow_service.py  test_money_flow_tool.py  test_normalizer.py  test_prompts_degradation.py  test_quote_delay.py  test_rate_limiter.py  test_screen.py  test_screen_tool.py  test_screen_validation.py
